# content-intelligence-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: feature_flags.yaml
docs/: production-deployment.md
docs/prompts/: INTERVIEW_PREP_after_changes.md  P0_1_real_eval_dataset_CIE.md  P0_2_quantified_tradeoffs_CIE.md  P0_3_real_eval_dataset_RAG.md  P1_1_production_deployment_doc.md  P1_2_deep_dive_2_patterns_RAG.md  P2_1_langfuse_observability.md  P2_2_docker_compose.md  P3_1_github_actions_ci.md
eval_data/: product_metadata_50.jsonl
eval_results/: benchmark_tradeoffs.json  eval_dummy_20260325_144830.json  eval_dummy_20260325_145659.json  eval_gemini_20260325_145453.json  eval_gemini_20260325_154713.json  eval_gemini_20260325_161801.json  eval_gemini_20260325_172135.json  eval_gemini_20260325_172248.json  eval_gemini_20260325_172753.json  eval_gemini_20260325_174135.json  eval_gemini_20260325_175845.json
scripts/: benchmark_tradeoffs.py  demo.py  run_eval.py
src/ab_test/: experiment.py
src/agents/: adaptive_retriever.py  recommendation_agent.py
src/api/: main.py  review.py
src/eval/: ab_prompt.py  drift_detector.py  judge.py
src/feature_flags/: __init__.py  registry.py
src/gateway/: batch.py  cache.py  cached_provider.py  circuit_breaker.py  context_manager.py  cost_tracker.py  guardrails.py  memory.py  parallel.py  providers.py  rate_limiter.py  router.py  security.py  streaming.py
src/mcp/: client.py  tools.py  trending.py
src/observability/: metrics.py  (+1 more)
(+39 files in other folders)
